--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,7 @@ retry_files_enabled = False
 forks = 100
 roles_path = roles
 inventory = inventories/*
-remote_user = cukzdroid
+remote_user = ubuntu
 interpreter_python = /usr/bin/python3
 
 [inventory]
